<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.apache.xsl</groupId>
	<artifactId>xalanj</artifactId>
	<version>3.0.1</version>
	<name>Apache Xalan-J</name>
	<description>Apache Xalan-J XSLT 3.0 maven project pom</description>

	<developers>
      <developer>
        <name>Gary Gregory</name>
        <email>ggregory@apache.org</email>
        <roles>
          <role>PMC Chair</role>
          <role>Committer</role>           
        </roles>
      </developer>
      <developer>
        <name>Joseph Kesselman</name>
        <email>jkesselm@apache.org</email>
        <roles>
          <role>PMC Member</role>
          <role>Committer</role>           
        </roles>
      </developer>
      <developer>
        <name>Mukul Gandhi</name>
        <email>mukulg@apache.org</email>
        <roles>
          <role>PMC Member</role>
          <role>Committer</role>           
        </roles>
      </developer>
    </developers>

	<dependencies>
		<dependency>
			<groupId>org.apache.xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.12.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.xerces</groupId>
			<artifactId>xml-apis</artifactId>
			<version>1.4.02</version>
		</dependency>
		<dependency>
			<groupId>org.apache.xsl</groupId>
			<artifactId>xpath31_types</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20240303</version>
		</dependency>
		<dependency>
			<groupId>edu.princeton.cs</groupId>
			<artifactId>java_cup</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>edu.princeton.cs</groupId>
			<artifactId>cup_runtime</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>Jlex</groupId>
			<artifactId>Jlex</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.mozilla</groupId>
			<artifactId>rhino</artifactId>
			<version>1.7.14</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>bsf</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.bcel</groupId>
			<artifactId>bcel</artifactId>
			<version>6.7.0</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit4</artifactId>
						<version>2.22.0</version>
					</dependency>
				</dependencies>
				<configuration>
					<includes>
						<include>**/*.java</include>
					</includes>
					<argLine>-Dfile.encoding=utf-8</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.22.0</version>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>xalan_maven_repos</id>
			<name>Xalan-J in project repos</name>
			<url>file://${project.basedir}/libs</url>
		</repository>
	</repositories>

	<!--
      * Licensed to the Apache Software Foundation (ASF) under one
      * or more contributor license agreements. See the NOTICE file
      * distributed with this work for additional information
      * regarding copyright ownership. The ASF licenses this file
      * to you under the Apache License, Version 2.0 (the  "License");
      * you may not use this file except in compliance with the License.
      * You may obtain a copy of the License at
      *
      *     http://www.apache.org/licenses/LICENSE-2.0
      *
      * Unless required by applicable law or agreed to in writing, software
      * distributed under the License is distributed on an "AS IS" BASIS,
      * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      * See the License for the specific language governing permissions and
      * limitations under the License.
  -->
</project>